--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newportfolio",
   "version": "0.1.0",
-  "homepage": "https://leechr2012.github.io/newportfolio",
+  "homepage": "https://leechr2012.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
