--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "newportfolio",
   "version": "0.1.0",
-  "homepage": "https://leechr2012.github.io/",
+  "homepage": "https://leechr2012.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
